Fix transform masks being broken after duplication

BUG:475745